# contact_sync

./: Cargo.toml  README.md
contact_sync_api/: Cargo.toml
contact_sync_api/src/: main.rs  router.rs
contact_sync_service/: Cargo.toml
contact_sync_service/migrations/2021-07-17-054719_create_contacts/: down.sql  up.sql
contact_sync_service/migrations/2021-07-29-025741_add_unique_user_constraint/: down.sql  up.sql
contact_sync_service/migrations/2021-07-29-031140_user_email/: down.sql  up.sql
contact_sync_service/src/: lib.rs  models.rs  schema.rs
