[package]
name = "contact_sync_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
contact_sync_service = { path = "../contact_sync_service" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]