[package]
name = "contact_sync_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
rocket_contrib = "*"
rust-crypto = "^0.2"
